Upload file initial

--- a/web/styles/lobby.css
+++ b/web/styles/lobby.css
@@ -18,4 +18,10 @@
 
 #hdl-uploadgame {
     text-align: center;
+    color: #5bc0de;
+}
+
+.hdl-scondary {
+    text-align: center;
+    color: #122b40;
 }
