Upload file - initial

--- a/web/styles/lobby.css
+++ b/web/styles/lobby.css
@@ -29,6 +29,7 @@
 #btn-upload {
     font-size: 18px;
     text-align: center;
+    margin: 10px auto;
     background-color: #31708f;
     width: 320px;
     height: 45px;
