--- a/web/styles/game.css
+++ b/web/styles/game.css
@@ -1,14 +1,3 @@
-.btn-sq-sm {
-    width: 25px !important;
-    height: 25px !important;
-    font-size: 10px;
-}
-
-.btn-board {
-    background-color: #31b0d5;
-}
-
-.column-sm {
-    width: 25px;
-    padding: 10px;
+table {
+    text-align: center;
 }
