--- a/web/styles/game.css
+++ b/web/styles/game.css
@@ -6,3 +6,21 @@ table {
     text-align: center;
     margin: 20px auto;
 }
+
+div.scrollmenu {
+    background-color: #333;
+    overflow: auto;
+    white-space: nowrap;
+}
+
+div.scrollmenu a {
+    display: inline-block;
+    color: white;
+    text-align: center;
+    padding: 14px;
+    text-decoration: none;
+}
+
+div.scrollmenu a:hover {
+    background-color: #777;
+}
