--- a/web/styles/game.css
+++ b/web/styles/game.css
@@ -33,7 +33,7 @@ div.scrollmenu a:hover {
     font-weight: 300;
 }
 
-.stats-attriubte {
+.stats-attribute {
     font-weight: 500;
     color: #122b40;
 }
