--- a/web/styles/game.css
+++ b/web/styles/game.css
@@ -47,6 +47,12 @@ div.scrollmenu a:hover {
     margin: 20px auto;
 }
 
+#gameOver {
+    text-align: center;
+    margin: 20px auto;
+    color: #8a6d3b;
+}
+
 #returnToLobby {
     width: 300px;
 }
